--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="col-md-6 mx-auto">
                 <h1 class="mb-3">profile scroller</h1>
                 
-                <div id="imageDisplay"></div>
+                <div id="imageDisplay" class="text-center"></div>
                 <br>
-                <div id="profileDisplay"></div>
+                <div id="profileDisplay" class="text-center"></div>
                 <br>
                 <button id="next" class="btn btn-dark btn-block">Next</button>
             </div>
